--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html, body {
+/*html, body {
 	padding: 0;
 	margin: 0;
 	width: 100%;
@@ -42,4 +42,4 @@ html, body {
 	position: absolute;
 	top: 18px;
 	right: 95px;
-}
+}*/
