--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 html, body {
 	padding: 0;
 	margin: 0;
-/*	width: 100%;
-*/	font-family: 'Roboto', Arial, sans-serif;
+	width: 100%;
+	font-family: 'Roboto', Arial, sans-serif;
 	font-size: 12px;
 }
 
@@ -46,5 +46,24 @@ html, body {
 
 #userprofile {
   padding-top: 100px;
+}
+
+#leaderboard {
+  background-color: rgb(0,210,248);
+}
+
+#userimage {
+  height: 100px;
+  width: 100px;
+  background-color: rgb(130,130,130);
+}
+
+.row-centered {
+    text-align:center;
+}
+
+#pointtracker {
+  border: 1px solid #000;
+  height: 70px;
 }
 
