--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html, body {
 	top: 0;
 	left: 0;
 	height: 70px;
-	background-color: #4dcffa;
+	background-color: rgba(77,207,250,0.9);
 	z-index: 1;
 }
 
@@ -37,6 +37,13 @@ html, body {
 
 .points {
 	font-size: 2em;
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+
+.points_label {
+	margin-top: -5px;
+	padding-top: -5px;
 }
 
 #user {
@@ -51,17 +58,143 @@ html, body {
 	width: 100%;
 	background-image: url('../images/f7_background.jpg');
 	height: 1400px;
-	background-size: cover;
-	margin-top: 70px;
+	background-size: 100%;
+	margin-top: 72px;
 	color: #ffffff;
+	background-repeat: no-repeat;
+	background-color: #120f16;
+}
+
+.challenge_title {
+	font-size: 2em;
+	font-weight: bold;
+}
+
+.desktop_spacer {
+	height: 360px;
+	width: 100%;
+}
+
+.mobile_spacer {
+	height: 100px;
+	width: 100%;
 }
 
 .grid_content1 {
-	padding-top: 400px;
 	text-align: center;
+}
+
+.fa {
+	color: #4dcffa;
 }
 
 .grid_content2 {
 	padding-top: 50px;
 	text-align: center;
+}
+
+.first_movie {
+	padding-top: 72px;
+	width: 100%;
+}
+
+.movie {
+	padding-top: 2px;
+}
+
+.image_deck {
+	width: 100%;
+}
+
+#winner {
+	width: 80%;
+	height: 80%;
+	background-color: #4dcffa;
+	border-radius: 30px;
+	text-align: center;
+	font-size: 3em;
+	color: #fff;
+	padding-top: 120px;
+	position: fixed;
+	top: 90px;
+	left: 10%;
+	z-index: 2;
+}
+
+.ticket_button {
+	background-color: #fff;
+	margin: 0 auto;
+	border-radius: 20px;
+	width: 400px;
+	font-size: 1em;
+	padding-top: 10px;
+	height: 70px;
+	text-align: center;
+	color: #4dcffa;
+}
+
+
+.ticket_button a {
+	text-decoration: none;
+}
+
+.ticket_button:hover {
+	background-color: #4dcffa;
+	border: 2px solid #fff;
+	color: white;
+}
+
+
+#user {
+	color: #ffffff;
+	text-align: right;
+	position: absolute;
+	top: 18px;
+	right: 95px;
+}
+
+#userprofile {
+  padding-top: 70px;
+  color: #fff;
+}
+
+#leaderboard {
+	margin: 0 auto;
+	background-color: #ff8400;
+	color: #fff;
+	font-size: 1.7em;
+	height: 400px;
+}
+
+#leader_title {
+	text-align: center;
+}
+
+#userimage {
+  height: 100px;
+  width: 100px;
+  background-color: rgb(130,130,130);
+}
+
+.row-centered {
+    text-align:center;
+}
+
+#pointtracker {
+  border: 1px solid #000;
+  height: 70px;
+}
+
+#movieinfo {
+  border: 1px solid #000;
+  padding: 0px;
+  overflow: hidden;
+}
+
+#movieinfo img {
+  width: 100%;
+}
+
+#extrapadding {
+  margin: 10px;
 }
